<resources>
    <string name="app_name">Quizzy</string>
    <string name="todo">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo123">TODO</string>
    <string name="india_has_largest_deposits_of_in_the_world">India has largest deposits of ____ in the world.</string>
    <string name="none_of_the_above">NONE OF THE ABOVE</string>
    <string name="gold">gold</string>
    <string name="copper">COPPER</string>
    <string name="mica">MICA</string>
    <string name="oxygen">Oxygen</string>
    <string name="hydrogen_sulphide">Hydrogen Sulphide</string>
    <string name="carbon_dioxide">Carbon Dioxide</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="brass_gets_discoloured_in_air_because_of_the_presence_of_which_of_the_following_gases_in_air">Brass gets discoloured in air because of the presence of which of the following gases in air?</string>
    <string name="_1_brass_gets_discoloured_in_air_because_of_the_presence_of_which_of_the_following_gases_in_air">Brass gets discoloured in air because of the presence of which of the following gases in air?</string>
    <string name="bromine">Bromine</string>
    <string name="chlorine">Chlorine</string>
    <string name="helium">Helium</string>
    <string name="phosphorous">Phosphorous</string>
    <string name="_2_which_of_the_following_is_a_non_metal_that_remains_liquid_at_room_temperature">Which of the following is a non metal that remains liquid at room temperature?</string>
    <string name="phosphorous1">Phosphorous</string>
    <string name="bromine1">Bromine</string>
    <string name="chlorine1">Chlorine</string>
    <string name="helium1">Helium</string>
    <string name="phosphorous12">Phosphorous</string>
    <string name="charcoal12">Charcoal</string>
    <string name="silicon12">Silicon</string>
    <string name="graphite14">Graphite</string>
    <string name="_2_which_of_the_following_is_used_in_pencils">Which of the following is used in pencils?</string>
    <string name="_3_which_of_the_following_metals_forms_an_amalgam_with_other_metals">Which of the following metals forms an amalgam with other metals?</string>
    <string name="tin">Tin</string>
    <string name="zinc">Zinc</string>
    <string name="lead">Lead</string>
    <string name="mercury">Mercury</string>
    <string name="_5_which_of_the_following_is_a_non_metal_that_remains_liquid_at_room_temperature">Which of the following is a non metal that remains liquid at room temperature?</string>
    <string name="bromineee">Bromine</string>
    <string name="phosphorousss">Phosphorous</string>
    <string name="chlorineee">Chlorine</string>
    <string name="heliummm">Helium</string>
    <string name="_4_which_of_the_following_is_a_non_metal_that_remains_liquid_at_room_temperature">Which of the following is a non metal that remains liquid at room temperature?</string>
    <string name="_5_chlorophyll_is_a_naturally_occurring_chelate_compound_in_which_central_metal_is">Chlorophyll is a naturally occurring chelate compound in which central metal is</string>
    <string name="calcium">calcium</string>
    <string name="copperrr">copper</string>
    <string name="iron">iron</string>
    <string name="magnesium">magnesium</string>
    <string name="q_1_in_a_cricket_world_cup_match_what_is_the_highest_score_of_a_team">Q 1 - In a Cricket World Cup match, what is the highest score of a team?</string>
    <string name="_417_6">417/6</string>
    <string name="_417_5">417/5</string>
    <string name="_399_7">399/7</string>
    <string name="_399_79">399/7</string>
    <string name="textview">TextView</string>
    <string name="_1_5">1/5</string>
    <string name="_2_5">2/5</string>
    <string name="_3_5">3/5</string>
    <string name="hydrogen_sulphideee">Hydrogen Sulphide</string>
    <string name="_4_4">4/4</string>
    <string name="_3_4">3/4</string>
    <string name="_1_4">1/4</string>
    <string name="score">SCORE</string>
    <string name="result">Result</string>
    <string name="textviewoo">TextView</string>
    <string name="_2_4">2/4</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
</resources>