<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz4Sci"
    android:background="@drawable/bquiz1">

    <TextView
        android:id="@+id/FIFTH"
        android:layout_width="242dp"
        android:layout_height="100dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounder"
        android:text="@string/_3_which_of_the_following_metals_forms_an_amalgam_with_other_metals"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#AE3CC3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="247dp"
        android:layout_height="225dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIFTH">

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tin"
            android:textColor="#9C27B0"
            android:textStyle="bold"
            app:rippleColor="#DA0707"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/mercury"
            android:textColor="#AB47BC"
            android:textStyle="bold"
            app:rippleColor="#4CAF50"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/lead"
            android:textColor="#9C27B0"
            android:textStyle="bold"
            app:rippleColor="#B50909"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/zinc"
            android:textColor="#9C27B0"
            android:textStyle="bold"
            app:rippleColor="#ED0A0A"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounder"
        android:text="@string/_3_4"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/FIFTH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="117dp"
        android:layout_height="118dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/s11" />

</androidx.constraintlayout.widget.ConstraintLayout>