<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quizc"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="153dp"
        android:layout_height="440dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/gk"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:backgroundTint="@drawable/rounded"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:defaultFocusHighlightEnabled="false"
            android:fadeScrollbars="false"
            android:padding="10dp"
            app:srcCompat="@drawable/gk2222"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/science"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:backgroundTint="@drawable/rounded"
            android:contentDescription="@string/todo12"
            android:focusableInTouchMode="false"
            android:forceHasOverlappingRendering="false"
            android:padding="10dp"
            android:paddingBottom="20dp"
            app:srcCompat="@drawable/s11" />

        <ImageButton
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="149dp"

            android:backgroundTint="@drawable/rounded"
            android:contentDescription="@string/todo123"
            app:srcCompat="@drawable/h1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
